[gd_scene load_steps=13 format=3 uid="uid://co4cmv7y5m16l"]

[ext_resource type="Shader" path="res://Player/Attack/grenade.gdshader" id="1_2de6b"]
[ext_resource type="Script" path="res://Player/Attack/grenade.gd" id="1_guu7k"]
[ext_resource type="Texture2D" uid="uid://ccykiv2hhhe6h" path="res://Textures/Items/Weapons/grenade_outline.png" id="2_cdubv"]
[ext_resource type="AudioStream" uid="uid://d2y8cf5uuggnx" path="res://Audio/SoundEffect/synthetic_bomb.ogg" id="3_egurs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uoj56"]
radius = 32.0

[sub_resource type="Curve" id="Curve_2fc5q"]
_data = [Vector2(0.00340136, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0178572), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_pwlsx"]
offsets = PackedFloat32Array(0, 0.746803, 0.98977)
colors = PackedColorArray(0.7, 0.105, 0.105, 1, 1, 0.709804, 0, 1, 1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1iph2"]
shader = ExtResource("1_2de6b")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/force = 0.03
shader_parameter/size = 0.0
shader_parameter/thickness = 0.145

[sub_resource type="Animation" id="Animation_mm6dw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.03]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_d4lwd"]
resource_name = "scale"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.2, 0.2), Vector2(0.4, 0.4), Vector2(0.6, 0.6), Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vgyck"]
resource_name = "shockwave"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.03, 0.03]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08tge"]
_data = {
"RESET": SubResource("Animation_mm6dw"),
"scale": SubResource("Animation_d4lwd"),
"shockwave": SubResource("Animation_vgyck")
}

[node name="Grenade" type="Area2D" groups=["attack"]]
top_level = true
z_index = 2
y_sort_enabled = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_guu7k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cdubv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uoj56")
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="snd_explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_egurs")
pitch_scale = 0.5

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_2fc5q")
color_ramp = SubResource("Gradient_pwlsx")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_1iph2")
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_08tge")
}

[connection signal="finished" from="snd_explosion" to="." method="_on_snd_explosion_finished"]
